--- a/src/app/pages/footer/footer.component.html
+++ b/src/app/pages/footer/footer.component.html
@@ -3,10 +3,10 @@
     <div class="container">
         <div class="row pb-4">
             <div class="col-md-3 footer_address">
-              <h5>DailyNeeds.com</h5>
+              <h5>youVA.com</h5>
               <p class="company-address"><i class="bi bi-geo-alt-fill"></i> G/23, Balewadi Phata, Baner, Pune, (M.H.)</p>
               <p class="company-address"><i class="bi bi-telephone-fill"></i> 1800 5578 4444</p>
-              <p class="company-address"><i class="bi bi-envelope-at-fill"></i> cs@dailyneeds.com</p>
+              <p class="company-address"><i class="bi bi-envelope-at-fill"></i> cs@youva.com</p>
             </div>
             
             <div class="col-md-3 footer_address">
@@ -37,7 +37,7 @@
         </div>
         
         <div class="footer-copyright pt-3 pb-2">
-            <p> &copy; <a class="border_bottom" routerLink="">DailyNeed</a>, All Right Reserved. 
+            <p> &copy; <a class="border_bottom" routerLink="">youVA</a>, All Right Reserved. 
               Designed By <a class="border_bottom" href="#">Satya Suman Behera</a></p>
         </div>
     </div>
