--- a/src/app/pages/pagenotfound/pagenotfound.component.html
+++ b/src/app/pages/pagenotfound/pagenotfound.component.html
@@ -1,5 +1,7 @@
+<!-- ERROR MESSAGE STARTS -->
 <div class="text-center" id="main">
     <div class="error">
         <h1>Error 404</h1>
     </div>
 </div>
+<!-- ERROR MESSAGE ENDS -->
