--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,6 +2,7 @@
 
 /* Importing Bootstrap SCSS file. */
 @import 'bootstrap/scss/bootstrap';
+@import 'bootstrap-icons/font/bootstrap-icons.scss';
 @import url('https://fonts.googleapis.com/css2?family=Headland+One&display=swap');
 
 body{
