--- a/src/app/pages/header/header.component.scss
+++ b/src/app/pages/header/header.component.scss
@@ -1,3 +1,36 @@
+@import url('https://fonts.googleapis.com/css2?family=Special+Elite&display=swap');
+.logo_text{
+    font-family: 'Special Elite', cursive;
+    font-weight: bold;
+    font-size: 1.6rem;
+}
+
+// ANIMATE LOGO starts
+.animate-charcter{
+    background-image: linear-gradient(
+    -225deg,
+    rgb(3, 123, 57) 0%,
+    rgb(13, 201, 163) 29%,
+    #6aff13 67%,
+    #44ff00 100%
+  );
+  background-size: auto auto;
+  background-clip: border-box;
+  background-size: 200% auto;
+  color: #fff;
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  animation: textclip 1.5s linear infinite;
+  display: inline-block;
+}
+@keyframes textclip { //THIS CODE IS IMPORTANT TO ANIMATE
+    to {
+      background-position: 200% center;
+    }
+  }
+// ANIMATE LOGO ENDS
+
 .badge{
     position: relative;
     bottom: 10px;
@@ -17,6 +50,22 @@
         transition: .5s;
         border-radius: 13px;
         cursor: pointer;
+        background-image: linear-gradient(
+            -225deg,
+            rgb(3, 115, 123) 0%,
+            rgb(13, 188, 201) 29%,
+            #6aff13 67%,
+            #44ff00 100%
+          );
+          background-size: auto auto;
+          background-clip: border-box;
+          background-size: 200% auto;
+          color: #fff;
+          background-clip: text;
+          -webkit-background-clip: text;
+          -webkit-text-fill-color: transparent;
+          animation: textclip 2s linear infinite;
+          display: inline-block;
     }
 
     .dropdown-menu_items:hover{
