--- a/src/app/pages/header/my-profile/my-profile.component.html
+++ b/src/app/pages/header/my-profile/my-profile.component.html
@@ -1,1 +1,146 @@
-<p>my-profile works!</p>
+<div class="d-flex justify-content-center my-5">
+    <div class="card" style="width: 25rem;">
+        <img class="card-img-top" src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_1280.png" alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title">{{userData.fullname}}</h5>
+        </div>
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item"><b>Email :</b> {{userData.email}}</li>
+          <li class="list-group-item"><b>Password :</b> {{userData.password}}</li>
+          <li class="list-group-item"><b>Address :</b> {{userData.address}}</li>
+          <li class="list-group-item"><b>Phone :</b> {{userData.phone}}</li>
+          <li class="list-group-item"><b>Premium Customer :</b> {{userData.premium}}</li>
+          <li class="list-group-item"><b>Offer Service :</b> {{userData.offer}}</li>
+          <!-- <li class="list-group-item"><b>Status :</b> {{userData.isactive?'Active':'InActive'}} </li> -->
+        </ul>
+        <div class="card-body">
+            <button class="btn btn-warning form-control" (click)="open(content);onEdit(userData)"> 
+                <i class="bi bi-pencil-fill"></i> Edit
+            </button>
+        </div>
+    </div>
+</div>
+
+<!-- MODEL FORM SECTION STARTS -->
+<ng-template #content let-modal>
+	<div class="modal-header">
+		<h4 class="modal-title" id="modal-basic-title">Signup Form </h4>
+		<button type="button" class="btn-close" aria-label="Close" (click)="modal.dismiss('Cross click')"></button>
+	</div>
+	<div class="modal-body">
+		<form [formGroup]="profileFormModel">
+            <!-- FULLNAME details starts -->
+            <div class="mb-3">
+                <label for="fullname"><b>Full-Name : </b></label>
+                <input  type="text" class="form-control p-2" placeholder="Full Name" formControlName="fullname">
+                <div class="mt-2" *ngIf="error['fullname'].touched && error['fullname'].invalid">
+                    <div *ngIf="error['fullname'].errors && error['fullname'].errors['required']" class="alert alert-danger">
+                        Full-Name is required.
+                    </div>
+                    <div *ngIf="error['fullname'].errors && error['fullname'].errors['maxlength']" class="alert alert-warning">
+                        Full-Name should be 20 character.
+                    </div>
+                </div>
+            </div>
+            <!-- FULLNAME details ends -->
+    
+            <!-- EMAIL-ADDRESS details starts -->
+            <div class="mb-3">
+                <label for="email"><b>Email Address :</b></label>
+                <input type="text" class="form-control p-2" placeholder="Email" formControlName="email">
+                <div class="mt-2" *ngIf="error['email'].touched && error['email'].invalid">
+                    <div *ngIf="error['email'].errors && error['email'].errors['required']" class="alert alert-danger">
+                        Email Address is required.
+                    </div>
+                    <div *ngIf="error['email'].errors && error['email'].errors['email']" class="alert alert-warning">
+                        Please, enter valid email address.
+                    </div>
+                </div>
+            </div>
+            <!-- EMAIL-ADDRESS details ends -->
+
+             <!-- PASSWORD details starts -->
+             <div class="mb-3">
+              <label for="password"><b>Password :</b></label>
+              <input type="test" class="form-control p-2" placeholder="Password" formControlName="password">
+              <div class="mt-2" *ngIf="error['password'].touched && error['password'].invalid">
+                <div *ngIf="error['password'].errors && error['password'].errors['required']" class="alert alert-danger">
+                    Password is required.
+                </div>
+                <div *ngIf="error['password'].errors && error['password'].errors['minlength']" class="alert alert-warning">
+                    Password at least 8.
+                </div>
+              </div>
+          </div>
+          <!-- PASSWORD details ends -->
+
+            <!-- ADDRESS details starts -->
+            <div class="mb-3">
+                <label for="address"><b>Address :</b></label>
+                <input name="address" class="form-control p-2" placeholder="Address" formControlName="address">
+                <div class="mt-2" *ngIf="error['address'].touched && error['address'].invalid">
+                    <div *ngIf="error['address'].errors && error['address'].errors['required']" class="alert alert-danger">
+                        Address is Required !!
+                    </div>
+                </div>
+            </div>
+            <!-- ADDRESS details ends -->
+    
+            <!-- PHONE/NUMBER details starts -->
+            <div class="mb-3">
+                <label for="phone"><b>Phone No :</b></label>
+                <input type="text" name="phone" class="form-control p-2" placeholder="Phone" formControlName="phone">
+                <div class="mt-2" *ngIf="error['phone'].touched && error['phone'].invalid">
+                    <div *ngIf="error['phone'].errors && error['phone'].errors['required']" class="alert alert-danger">
+                        Phone No. is required.
+                    </div>
+                    <div *ngIf="error['phone'].errors && (error['phone'].errors['maxlength'] || error['phone'].errors['minlength'])" class="alert alert-warning">
+                        Phone No. is not valid.
+                    </div>
+                </div>
+            </div>
+            <!-- PHONE/NUMBER details ends -->
+    
+            <!-- PREMIUM CUSTOMER, OFFER SERVICE details starts -->
+            <div class="row mb-3">
+
+                <!-- PREMIUM CUSTOMER details starts -->
+                <div class="col-md-6">
+                    <label for="premium" class="pe-3"><b>Premium Customer :</b></label>
+                    <div *ngFor="let offerOption of ['Yes', 'No']">
+                        <input type="radio" [value]="offerOption" formControlName="premium">
+                        <label for="">{{ offerOption }}</label>
+                    </div>
+                    <div class="mt-2" *ngIf="error['premium'].touched && error['premium'].invalid">
+                        <div *ngIf="error['premium'].errors && error['premium'].errors['required']" class="alert alert-danger">
+                            Select an option.
+                        </div>
+                    </div>
+                </div>
+                <!-- PREMIUM CUSTOMER details ends -->
+
+                <!-- OFFER SERVICE details starts -->
+                <div class="col-md-6">
+                    <label for="offer"><b>Offer Service :</b></label>
+                        <div *ngFor="let service of ['Home Delivery', 'Cash on Delivery', 'Order Pickup']">
+                            <input type="checkbox" [value]="service" formControlName="offer">
+                            <label>{{ service }}</label>
+                        </div>
+                        <div class="mt-2" *ngIf="error['offer'].touched && error['offer'].invalid">
+                        <div *ngIf="error['offer'].errors && error['offer'].errors['required']" class="alert alert-danger">
+                            Select your Offer Service.
+                        </div>
+                    </div>
+                </div>
+                <!-- OFFER SERVICE details ends -->
+
+            </div>
+            <!-- PREMIUM CUSTOMER, OFFER SERVICE details ends -->
+        </form>
+	</div>
+	<div class="modal-footer">
+        <button type="button" class="btn btn-outline-danger" (click)="modal.close('Close click')">Cancel</button>
+		<button type="button" class="btn btn-outline-success" (click)="updateDetails();modal.close()">Update</button>
+	</div>
+  </ng-template>
+  <!-- MODEL FORM SECTION ENDS -->
