--- a/src/app/pages/header/signup/signup.component.html
+++ b/src/app/pages/header/signup/signup.component.html
@@ -3,7 +3,7 @@
     <div class="box-1">
         <div class="content-holder mt-5 p-5">
             <h2 class="m-4">Signup Form</h2>
-            <button class="button-1 p-3 mt-4 btn btn-dark" routerLink="/login">Login</button>
+            <button class="p-3 mt-4 btn btn-dark" routerLink="/login">Login</button>
         </div>
     </div>
 
@@ -19,7 +19,7 @@
                         Full-Name is required.
                     </div>
                     <div *ngIf="error['fullname'].errors && error['fullname'].errors['maxlength']" class="alert alert-warning">
-                        Full-Name should be 20 character.
+                        Full-Name should be 25 character.
                     </div>
                 </div>
             </div>
@@ -40,27 +40,35 @@
             <!-- EMAIL-ADDRESS details ends -->
     
             <!-- PHONE/NUMBER details starts -->
-            <div class="mb-3">
-                <input type="text" class="form-control p-2" placeholder="Phone" formControlName="phone">
-                <div class="mt-2" *ngIf="error['phone'].touched && error['phone'].invalid">
-                    <div *ngIf="error['phone'].errors && error['phone'].errors['required']" class="alert alert-danger">
-                        Phone No. is required.
-                    </div>
-                    <div *ngIf="error['phone'].errors && (error['phone'].errors['maxlength'] || error['phone'].errors['minlength'])" class="alert alert-warning">
-                        Phone No. is not valid.
+            <div class="row mb-3">
+                <div class="col-md-10">
+                    <input type="text" class="form-control p-2" placeholder="Phone (with +91)" formControlName="phone" >
+                    <div class="mt-2" *ngIf="error['phone'].touched && error['phone'].invalid">
+                        <div *ngIf="error['phone'].errors && error['phone'].errors['required']" class="alert alert-danger">
+                            Phone No. is required.
+                        </div>
+                        <div *ngIf="error['phone'].errors && (error['phone'].errors['maxlength'] || error['phone'].errors['minlength'])" class="alert alert-warning">
+                            Phone No. is not valid.
+                        </div>
                     </div>
                 </div>
+
+                <div class="col-md-2">
+                    <button (click)="getOTP()" class="btn btn-dark py-2">Get OTP</button>
+                </div>
+
             </div>
             <!-- PHONE/NUMBER details ends -->
     
             <!-- PREMIUM CUSTOMER, OFFER SERVICE details starts -->
             <div class="row mb-3">
 
+                <!-- PREMIUM CUSTOMER details starts -->
                 <div class="col-md-6">
                     <label for="premium" class="pe-3"><b>Premium Customer :</b></label>
-                    <div *ngFor="let offerOption of ['Yes', 'No']">
-                        <input type="radio" [value]="offerOption" formControlName="premium">
-                        <label for="">{{ offerOption }}</label>
+                    <div *ngFor="let premium of ['Yes', 'No']">
+                        <input type="radio" [value]="premium" formControlName="premium">
+                        <label for="">{{ premium }}</label>
                     </div>
                     <div class="mt-2" *ngIf="error['premium'].touched && error['premium'].invalid">
                         <div *ngIf="error['premium'].errors && error['premium'].errors['required']" class="alert alert-danger">
@@ -68,26 +76,55 @@
                         </div>
                     </div>
                 </div>
+                <!-- PREMIUM CUSTOMER details ends -->
 
+                <!-- OFFER SERVICE details starts -->
                 <div class="col-md-6">
                     <label for="offer"><b>Offer Service :</b></label>
-                        <div *ngFor="let service of ['Home Delivery', 'Cash on Delivery', 'Order Pickup']">
-                            <input type="checkbox" [value]="service" formControlName="offer">
-                            <label>{{ service }}</label>
-                        </div>
-                        <div class="mt-2" *ngIf="error['offer'].touched && error['offer'].invalid">
+                    <div *ngFor="let service of ['Home Delivery', 'Cash on Delivery', 'Order Pickup']">
+                        <input type="checkbox" [value]="service" formControlName="offer">
+                        <label>{{ service }}</label>
+                    </div>
+                    <div class="mt-2" *ngIf="error['offer'].touched && error['offer'].invalid">
                         <div *ngIf="error['offer'].errors && error['offer'].errors['required']" class="alert alert-danger">
                             Select your Offer Service.
                         </div>
                     </div>
                 </div>
+                <!-- OFFER SERVICE details ends -->
 
             </div>
             <!-- PREMIUM CUSTOMER, OFFER SERVICE details ends -->
 
             <!-- ADDRESS details starts -->
+            <!-- <div class="mb-3 row" formGroupName="address">
+                <div class="col-md-4">
+                    <input type="text" placeholder="Country" class="form-control" formControlName="address.country">
+                    <div class="mt-2" *ngIf="error['country'].touched && error['country'].invalid">
+                        <div *ngIf="error['country'].errors && error['country'].errors['required']" class="alert alert-danger">
+                            Country is Required !!
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <input type="text" placeholder="State" class="form-control" formControlName="address.state">
+                    <div class="mt-2" *ngIf="error['state'].touched && error['state'].invalid">
+                        <div *ngIf="error['state'].errors && error['state'].errors['required']" class="alert alert-danger">
+                            State is Required !!
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <input type="text" placeholder="District" class="form-control" formControlName="address.district">
+                    <div class="mt-2" *ngIf="error['district'].touched && error['district'].invalid">
+                        <div *ngIf="error['district'].errors && error['district'].errors['required']" class="alert alert-danger">
+                            District is Required !!
+                        </div>
+                    </div>
+                </div>   
+            </div> -->
             <div class="mb-3">
-                <textarea name="address" class="form-control p-2" cols="30" rows="5" placeholder="Address" formControlName="address"></textarea>
+                <input type="text" placeholder="Address" class="form-control" formControlName="address">
                 <div class="mt-2" *ngIf="error['address'].touched && error['address'].invalid">
                     <div *ngIf="error['address'].errors && error['address'].errors['required']" class="alert alert-danger">
                         Address is Required !!
@@ -109,7 +146,23 @@
                 </div>
             </div>
             <!-- PASSWORD details ends -->
-            <button type="submit" class="btn btn-outline-success py-3 px-4" (click)="addDetails('')" [disabled]="signupForm.invalid">Submit</button>
+
+            <!-- CONFIRM-PASSWORD details starts -->
+            <div class="mb-3">
+                <input type="password" class="form-control p-2" placeholder="Confirm Password" formControlName="cnfrm_pass">
+                <div class="mt-2" *ngIf="error['cnfrm_pass'].touched && error['cnfrm_pass'].invalid">
+                    <div *ngIf="error['cnfrm_pass'].errors && error['cnfrm_pass'].errors['required']" class="alert alert-danger">
+                        Confirm Password is required.
+                    </div>
+                </div>
+                <div *ngIf="this.signupForm.getError('mismatch') && error['cnfrm_pass'].touched">
+                    <div class="alert alert-warning mt-3">  Password didn't matched. </div>
+                </div>
+            </div>
+            <!-- CONFIRM-PASSWORD details ends -->
+            <button type="submit" class="btn btn-outline-success py-3 px-4" (click)="addDetails()" [disabled]="signupForm.invalid">Submit</button>
         </form>
     </div>
 </div>
+
+<!-- [disabled]="signupForm.invalid" -->
