--- a/src/app/pages/pagenotfound/pagenotfound.component.scss
+++ b/src/app/pages/pagenotfound/pagenotfound.component.scss
@@ -9,6 +9,7 @@ h1{
     padding-right: 12px;
     animation: type .5s alternate infinite;
 }
+    // ANIMATION PURPOSE
     @keyframes type{
         from{box-shadow: inset -3px 0px 0px black;}
         to{box-shadow: inset -3px 0px 0px transparent;}
