--- a/src/app/pages/header/header.component.scss
+++ b/src/app/pages/header/header.component.scss
@@ -80,3 +80,10 @@
     transition: .5s;
     color: white;
 }
+
+.search{
+    position: relative; 
+    top: 8px; 
+    right: 44px; 
+    font-weight: bold;
+}
