--- a/src/app/pages/header/header.component.html
+++ b/src/app/pages/header/header.component.html
@@ -5,8 +5,8 @@
 			youVA.com
 		</a>
       <form class="d-flex w-75">
-        <input class="form-control me-2" [(ngModel)]="searchTerm" (keyup)="search($event)" [ngModelOptions]="{standalone: true}" type="search" placeholder="Search Products" aria-label="Search">
-        <i class="bi bi-search" style="position: relative; top: 8px; right: 44px; font-weight: bold;"></i>
+        <input class="form-control me-2" [(ngModel)]="searchTerm" (keyup)="search($event)" [ngModelOptions]="{standalone: true}" type="text" placeholder="Search Products" aria-label="Search">
+        <i class="bi bi-search search"></i>
       </form>
       <i class="bi bi-cart4 text-white ms-5 fs-3" routerLink="cart" style="cursor: pointer;"></i>
       <div style="font-size: 12px; position: relative; right: 15px;" class="badge rounded-pill bg-danger">{{ totalItem }}</div>
