--- a/src/app/pages/header/signup/signup.component.html
+++ b/src/app/pages/header/signup/signup.component.html
@@ -57,6 +57,13 @@
                     <button (click)="getOTP()" class="btn btn-dark py-2">Get OTP</button>
                 </div>
 
+                <!-- <div class="otp">
+                    <ng-otp-input  (onInputChange)="onOtpChange($event)" [config]="config"></ng-otp-input> <br>
+                    <button class="btn btn-success ms-5" (click)="handleCheck()">
+                        Verify OTP
+                    </button>
+                </div> -->
+
             </div>
             <!-- PHONE/NUMBER details ends -->
     
@@ -95,6 +102,29 @@
 
             </div>
             <!-- PREMIUM CUSTOMER, OFFER SERVICE details ends -->
+
+            <!-- IMAGE UPLOAD details starts -->
+            <div class="mb-2">
+                <label for="image"><b>Profile Uplaod :</b></label>
+                <input id="image" type="file" class="form-control p-2" formControlName="image" (change)="onFileSelected($event)">
+                <!-- <button (click)="onUpload()" class="btn btn-primary mt-2">Upload</button> -->
+                <div class="mt-2" *ngIf="error['image'].touched && error['image'].invalid">
+                    <div *ngIf="error['image'].errors && error['image'].errors['required']" class="alert alert-danger">
+                        Image is required.
+                    </div>
+                </div>
+            </div>
+            <!-- Display selected image image -->
+            <div *ngIf="imagePreview" class="mb-3">
+                <label><b>Image Preview :</b></label>
+                <img [src]="imagePreview" alt="Image Preview" width="200">
+            </div>
+            <!-- Display uploaded image -->
+            <!-- <div *ngIf="uploadedImageUrl">
+                <label><b>Uploaded Image :</b></label>
+                <img [src]="uploadedImageUrl" alt="Uploaded Image" width="200">
+            </div> -->
+            <!-- IMAGE UPLOAD details ends -->
 
             <!-- ADDRESS details starts -->
             <div class="mb-3">
