--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,3 +14,6 @@ body{
 
 /* Importing Bootstrap SCSS file. */
 @import 'bootstrap/scss/bootstrap';
+
+/* Importing Bootstrap SCSS file. */
+@import 'bootstrap/scss/bootstrap';
