contact and about component minor changes

--- a/src/app/pages/header/contact/contact.component.html
+++ b/src/app/pages/header/contact/contact.component.html
@@ -5,13 +5,13 @@
             <p><b>Do you need help getting started?</b></p>
             <p>We’ll help you every step of the way! Simply send us an email or give us a call for assistance. </p>
 
-            <p class="bold">Address  :  <span class="details">G/23, Balewadi Phata, Baner, Pune, (M.H.)</span></p>
-            <p class="bold">Email  :  <span class="details">cs@dailyneeds.com</span></p>
-            <p class="bold">Call on  :  <span class="details">1800 5578 4444</span></p>
+            <p class="bold">Address  :  <span class="details">V-603, DSK Vishwa, Dhayari, Pune, (M.H.)</span></p>
+            <p class="bold">Email  :  <span class="details">satyasuman123123@gmail.com</span></p>
+            <p class="bold">Call on  :  <span class="details">+91 7********7</span></p>
             <p class="bold">8:00 AM to 8:00 PM, 365 days</p>
         </div>
         <div class="col-md-6 contact_map">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15127.37217442951!2d73.76157724360718!3d18.581113609689027!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bc2b9364128099d%3A0x43892e901929965f!2sBalewadi%2C%20Pune%2C%20Maharashtra!5e0!3m2!1sen!2sin!4v1691139778239!5m2!1sen!2sin" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d7569.764570185964!2d73.79914630000002!3d18.4436531!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sin!4v1733227451055!5m2!1sen!2sin" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
     </div>
 </div>
