footer, contact & about minor changes

--- a/src/app/pages/header/contact/contact.component.html
+++ b/src/app/pages/header/contact/contact.component.html
@@ -7,7 +7,7 @@
 
             <p class="bold">Address  :  <span class="details">V-603, DSK Vishwa, Dhayari, Pune, (M.H.)</span></p>
             <p class="bold">Email  :  <span class="details">satyasuman123123@gmail.com</span></p>
-            <p class="bold">Call on  :  <span class="details">+91 7********7</span></p>
+            <p class="bold">Call on  :  <span class="details">1800 5578 4444</span></p>
             <p class="bold">8:00 AM to 8:00 PM, 365 days</p>
         </div>
         <div class="col-md-6 contact_map">
