--- a/src/app/pages/footer/footer.component.html
+++ b/src/app/pages/footer/footer.component.html
@@ -4,9 +4,9 @@
         <div class="row pb-4">
             <div class="col-md-3 footer_address">
               <h5>youVA.com</h5>
-              <p class="company-address"><i class="bi bi-geo-alt-fill"></i> G/23, Balewadi Phata, Baner, Pune, (M.H.)</p>
+              <p class="company-address"><i class="bi bi-geo-alt-fill"></i> V-603, DSK Vishwa, Dhayari, Pune, (M.H.)</p>
               <p class="company-address"><i class="bi bi-telephone-fill"></i> 1800 5578 4444</p>
-              <p class="company-address"><i class="bi bi-envelope-at-fill"></i> cs@youva.com</p>
+              <p class="company-address"><i class="bi bi-envelope-at-fill"></i> satyasuman123123@gmail.com</p>
             </div>
             
             <div class="col-md-3 footer_address">
