--- a/src/app/pages/footer/footer.component.html
+++ b/src/app/pages/footer/footer.component.html
@@ -29,7 +29,7 @@
                 <div class="follow-icon">
                   <span> <i class="bi bi-instagram pe-2"></i> </span>
                   <span> <i class="bi bi-facebook pe-2"></i> </span>
-                  <span> <i class="bi bi-twitter pe-2"></i> </span>
+                  <span> <i class="bi bi-twitter-x pe-2"></i> </span>
                   <span> <i class="bi bi-whatsapp pe-2"></i> </span>
                   <span> <i class="bi bi-linkedin"></i> </span>
                 </div>
